# rat

./: .cvsignore  .cvspass  .gdb_init  Build  CODING_STYLE  COPYRIGHT  INSTALL.TXT  LICENSE  MODS  Makefile  Makefile.in  Makefile_FreeBSD_2  Makefile_HPUX_09  Makefile_IRIX_5  Makefile_IRIX_6  Makefile_Linux_2_0  Makefile_SunOS_4  Makefile_SunOS_5  README  README.devices  README.files  README.mbus  README.qfdes  README.reporting-bugs  README.settings  README.voxlet  VERSION  _main.c  acconfig.h  agc.c  agc.h  asfilebox.tcl  assert.h  auddev.c  auddev.h  auddev_alsa.c  auddev_alsa.h  auddev_atm.c  auddev_atm.h  auddev_freebsd.c  (+314 more)
man/man1/: rat.1  rat.ps
tcl/: init.tcl
tcl2c/: .cvsignore  tcl2c.c  tcl2c.dsp
tests/: Makefile  rtone.c  test_codecs.c  test_convert.c  test_pktbuf.c  test_repair.c  test_ts.c
tk/: aatk.tcl
win32/: echo.txt  tk-rat.res
win95/: tcl2c  tcl_libs.c
xbm/: cd.xbm  cd_mute.xbm  disk.xbm  head.xbm  head_mute.xbm  left.xbm  line_in.xbm  line_in_mute.xbm  line_out.xbm  line_out_mute.xbm  mic.xbm  mic_mute.xbm  pause.xbm  play.xbm  rat2.xbm  rat_med.xbm  rat_small.xbm  rec.xbm  right.xbm  speaker.xbm  speaker_mute.xbm  stop.xbm  ucl.xbm  waveform.xbm
